# cb-houdini-tools

./: LICENSE.md  README.md
copy-parms-in-folder-to-other-node/: CopyParmsInFolderToOtherNode.py  README.md
copy-parms-to-other-node/: CopyParmsToOtherNode.py  README.md  copy-parms-to-other-node.json  pyproject.toml
copy-parms-to-other-node/_OLD/: CopyParmsToOtherNode.py  README.md
copy-parms-to-other-node/copyParmsToOtherNode/: __init__.py
copy-parms-to-other-node/copyParmsToOtherNode/core/: CopyParmsToOtherNode.py
copy-parms-to-other-node/copyParmsToOtherNode/gui/: UI.py
hip-quips/: README.md
hip-quips/curve-coordinate-system-copy-circles-lines/velocity-pumps-along-curves/: CurveCopyCirclesLinesTricks_Pumps_v005.hipnc
hip-quips/curve-coordinate-system-copy-circles-lines/volume-noise-along-curves/: curve_rest_volume_noise_copy_circles_lines_v002.hipnc  curve_rest_volume_noise_copy_circles_lines_v003.hipnc
hip-quips/unit-vs-unitlen-curveu/: UNIT_vs_UNITLEN_curveu.hipnc
pop-interaction-forces/: README.md  dop_cb_pop_interaction_forces.1.0.hdanc
pop-interaction-forces/example-hip/: README.md
sinkhorn-based-log-domain-optimal-transport/: GPUSinkhornBasedLogDomainOptimalTransportHoudini.py  README.md  SinkhornBasedLogDomainOptimalTransportHoudini.py  sop_cb_optimal_transport.1.0.hdanc
sinkhorn-based-log-domain-optimal-transport/example-hip/: OptimalTransport_SinkhornBasedLogDomain_v010.hipnc  README.md
