[project]
name = "copyParmsToOtherNode"
description = "A tool to copy a parm or all parms in source parm folder from source node to the destination node."
version = "1.3.1"
authors = [
    {name = "Conlen Breheny"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "QtPy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
